# cpp-serialization-library

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  TODO.md  metaserializationlibrary.cpp
include/: chain_invoke.h  chain_invoker.h  function_info.h  metaprogramming_base.h  object_invoke.h
src/: temp_source_file.cpp
test/: CMakeLists.txt  testMain.cpp
tools/: generateFunctionInfos.py
